--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -3,9 +3,9 @@ $blue: #07a;
 $red: #dd4a68;
 $orange: #e90;
 $foreground: #111;
-$serif: didot, times new roman, serif;
-$sans-serif: gill sans, helvetica, arial, arial, sans-serif;
-$monospace: prestige elite std, consolas, courier new, monospace;
+$serif: 'Cormorant Garamond', didot, times new roman, serif;
+$sans-serif: 'Source Sans Pro', helvetica, arial, sans-serif;
+$monospace: 'Roboto Mono', consolas, courier new, monospace;
 $emdash: '\2014';
 
 $hljs-comment: slategray;
