--- a/styles/todomvc.scss
+++ b/styles/todomvc.scss
@@ -1,6 +1,6 @@
 .todoapp {
 
-	margin: 150px 0 40px 0;
+	text-align: left;
 	position: relative;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
 	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
@@ -69,6 +69,11 @@
 		-webkit-text-rendering: optimizeLegibility;
 		-moz-text-rendering: optimizeLegibility;
 		text-rendering: optimizeLegibility;
+	}
+
+	li {
+		transform: none;
+		margin: 0 0;
 	}
 
 	.new-todo,
